results/scraper/launchpad/1861551
Errors while compiling source

OS type: Mac OS X 10.11.6
List of errors:
qemu-io-cmds.c:837:5: warning: implicit declaration of function 'clock_gettime' is invalid in C99 [-Wimplicit-function-declaration]
    clock_gettime(CLOCK_MONOTONIC, &t1);
    ^
qemu-io-cmds.c:837:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:843:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:970:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:972:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1184:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:1194:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1306:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:1308:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1351:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1383:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1518:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &ctx->t1);
                  ^
qemu-io-cmds.c:1663:23: error: use of undeclared identifier 'CLOCK_MONOTONIC'
        clock_gettime(CLOCK_MONOTONIC, &ctx->t1);
                      ^
qemu-io-cmds.c:1885:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:1887:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
1 warning and 14 errors generated.
make: *** [qemu-io-cmds.o] Error 1

Hi. The CLOCK_MONOTONIC facility was added in OSX 10.12; the version of OSX you're using is too old to build QEMU on, I'm afraid. QEMU's policy is to support the last two releases of OSX, so at the moment that's 10.14 and 10.15. Compiling on older versions might work, but it also might not, as you've discovered.


